# Terra

./: CMakeLists.txt  README.md
includes/renderer/: renderer.hpp  texturemanager.hpp
includes/simulation/: circularbuffer.hpp  simulation.hpp
includes/simulation/ant/: ant.hpp  trail.hpp
includes/simulation/world/: colony.hpp  food.hpp  qtree.hpp  world.hpp
src/: ant.cpp  benchmark.cpp  colony.cpp  food.cpp  main.cpp  qtree.cpp  renderer.cpp
